<resources>
    <string name="app_name">Language Tutorial</string>
    <string name="new_user_registration">New User Registration …!</string>
    <string name="user_log_in">User Log in</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="occupation">Occupation</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="beginner_s_level">Beginner\'s Level</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="expert_level">Expert Level</string>
    <string name="ranking">Ranking</string>
    <string name="logout">Logout</string>
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="beginners_progress">BEGINNERS PROGRESS</string>
    <string name="expert_progress">EXPERT PROGRESS</string>
    <string name="profile_details">PROFILE DETAILS</string>
    <string name="advance_progress">ADVANCE PROGRESS</string>
    <string name="update">Update</string>
    <string name="edit">EDIT</string>
    <string name="done">DONE</string>
    <string name="example">Example</string>
    <string name="next">Next</string>
    <string name="result">RESULT</string>
    <string name="todo">TODO2</string>


</resources>
