<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/house"
            android:title="@string/home" />

        <item
            android:id="@+id/BeginnersLevel_menu"
            android:icon="@drawable/bigners"
            android:title="@string/beginner_s_level" />

        <item
            android:id="@+id/AdvancedLevel_menu"
            android:icon="@drawable/advanced"
            android:title="@string/advanced_level" />

        <item
            android:id="@+id/ExpertLevel_menu"
            android:icon="@drawable/expert"
            android:title="@string/expert_level" />

        <item
            android:id="@+id/Ranking_menu"
            android:icon="@drawable/ranking"
            android:title="@string/ranking" />

        <item
            android:id="@+id/Logout_menu"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

</menu>