<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foslipy.languagetutorial.Registration"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        />
    <EditText
        android:id="@+id/ET_First_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:width="350dp"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        />
    <EditText
        android:id="@+id/ET_Last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_First_name"
        android:hint="@string/last_name"
        android:width="350dp"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/ET_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_Last_name"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:width="350dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/ET_Occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_Email"
        android:layout_centerHorizontal="true"
        android:hint="@string/occupation"
        android:width="350dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/ET_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ET_Occupation"
        android:width="350dp"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/BT_Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_Pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#4854f5"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"
        />
</RelativeLayout>
