<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foslipy.languagetutorial.Login">

    <EditText
        android:id="@+id/ET_Email"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:background="#dfdede"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ET_Pass"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_below="@+id/ET_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#dfdede"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/BT_Sign_In"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_Pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="#4854f5"
        android:text="@string/sign_in"
        android:textColor="#ffffff" />
    <TextView
        android:id="@+id/Text_User_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/user_log_in"
        android:textStyle="bold"
        android:textColor="#ca232323"
        android:textSize="30sp"
        />
<Button
    android:id="@+id/BT_Sign_up"
    android:layout_height="wrap_content"
    android:layout_width="150dp"
    android:layout_below="@id/BT_Sign_In"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:background="#4854f5"
    android:text="@string/sign_up"
    android:textColor="@android:color/white"
    />

</RelativeLayout>
