<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foslipy.languagetutorial.EditProfile">

    <android.support.v7.widget.CardView
        android:id="@+id/CardView"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/EditProfile_text_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_details"
                android:textColor="#000"
                android:textSize="20sp"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/EditProfile_text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditProfile_text_profile"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="17sp"
                android:textColor="#000"
                />
            <EditText
                android:id="@+id/EditProfile_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:textSize="17sp"
                android:layout_below="@+id/EditProfile_text_profile"
                android:inputType="textEmailAddress"
                 />
            <TextView
                android:id="@+id/EditProfile_text_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditProfile_Email"
                android:padding="10dp"
                android:text="@string/first_name"
                android:textSize="17sp"
                android:textColor="#000"
                />
            <EditText
                android:id="@+id/EditProfile_First_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:textSize="17sp"
                android:layout_below="@+id/EditProfile_Email"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:id="@+id/EditProfile_text_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditProfile_First_name"
                android:padding="10dp"
                android:text="@string/last_name"
                android:textSize="17sp"
                android:textColor="#000"
                />
            <EditText
                android:id="@+id/EditProfile_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:textSize="17sp"
                android:layout_below="@+id/EditProfile_First_name"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:id="@+id/EditProfile_text_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditProfile_last_name"
                android:padding="10dp"
                android:text="@string/occupation"
                android:textSize="17sp"
                android:textColor="#000"
                />
            <EditText
                android:id="@+id/EditProfile_Occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:textSize="17sp"
                android:layout_below="@+id/EditProfile_last_name"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"
                />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/EditProfile_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CardView"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:text="@string/update"
        android:textSize="20sp"
        android:padding="10dp"
        />
</RelativeLayout>
