<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foslipy.languagetutorial.ProfileActivity">

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

         <RelativeLayout
             android:id="@+id/Relative_Layout"
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:background="#FFCDD2"
             android:focusable="true"
             android:focusableInTouchMode="true"
             >

             <ImageView
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/Profile_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/beginnerslevel"
                 />
             <TextView
                 android:id="@+id/Profile_Image_first_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="#D32F2F"
                 android:textSize="20sp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="160dp"
                 />
             <TextView
                 android:id="@+id/Profile_image_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/Profile_Image_first_name"
                 android:layout_centerHorizontal="true"
                 android:textSize="20sp"
                 android:textStyle="italic"
                 android:text=""
                 android:textColor="@color/black"
                 />

         </RelativeLayout>

         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
             <TextView
                 android:id="@+id/text_view_beginners"
                 android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/beginners_progress"
                 android:textSize="20sp"
                 android:textColor="#000"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp" />
                <TextView
                    android:id="@+id/text_progress_beginners"
                    android:padding="5dp"
                    android:layout_marginStart="270dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
             <ProgressBar
                 android:id="@+id/Beginners_Progressbar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text_view_beginners"
                 android:padding="2dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginEnd="20dp"
                 />
             <TextView
                 android:id="@+id/text_view_advance"
                 android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/advance_progress"
                 android:textSize="20sp"
                 android:textColor="#000"
                 android:layout_below="@+id/Beginners_Progressbar"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 />
                <TextView
                    android:id="@+id/text_progress_advance"
                    android:layout_below="@id/Beginners_Progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="270dp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    />

             <ProgressBar
                 android:id="@+id/Advance_Progressbar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
                 android:layout_below="@+id/text_view_advance"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginEnd="20dp"
                 />
             <TextView
                 android:id="@+id/text_view_expert"
                 android:layout_below="@+id/Advance_Progressbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/expert_progress"
                 android:textSize="20sp"
                 android:padding="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 android:textColor="#000"
                 />
                <TextView
                    android:id="@+id/text_progress_expert"
                    android:layout_below="@id/Advance_Progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="270dp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    />
                <ProgressBar
                    android:id="@+id/Expert_Progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_below="@+id/text_view_expert"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    />

            </RelativeLayout>
         </android.support.v7.widget.CardView>

         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
             <TextView
                 android:id="@+id/Profile_text_view_acc_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/profile_details"
                 android:textSize="20sp"
                 android:padding="5dp"
                 android:textStyle="normal"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 android:textColor="#000"
                 />
                <TextView
                    android:id="@+id/Profile_button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:layout_marginLeft="295dp"
                    android:layout_marginStart="295dp"
                    android:layout_marginTop="6dp"
                    android:textSize="18sp"
                    android:textColor="#D32F2F"
                    android:visibility="visible"
                    />

                 <TextView
                     android:id="@+id/Profile_button_done"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/done"
                     android:layout_marginLeft="290dp"
                     android:layout_marginStart="290dp"
                     android:layout_marginTop="6dp"
                     android:textSize="18sp"
                     android:textColor="#D32F2F"
                     android:visibility="invisible"
                     />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputLayout_first_name"
                    android:layout_below="@id/Profile_text_view_acc_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="18sp"
                    android:enabled="false"
                    android:textColor="#1e1e1e"
                    />
                </android.support.design.widget.TextInputLayout>

                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/TextInputLayout_last_name"
                     android:layout_below="@+id/TextInputLayout_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="5dp">

                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/Profile_last_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/last_name"
                         android:inputType="text"
                         android:maxLines="1"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginEnd="10dp"
                         android:textSize="18sp"
                         android:enabled="false"
                         android:textColor="#1e1e1e"
                         />
                 </android.support.design.widget.TextInputLayout>

                 <android.support.design.widget.TextInputLayout
                     android:layout_below="@id/TextInputLayout_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     >
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/Profile_occupation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/occupation"
                         android:inputType="text"
                         android:maxLines="1"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginEnd="10dp"
                         android:textSize="18sp"
                         android:enabled="false"
                         android:textColor="#1e1e1e"
                         />
                 </android.support.design.widget.TextInputLayout>

             </RelativeLayout>
         </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
